# pixelpartitioner

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build-unix-mac-win.yml
Functions/PixelPartitioner/: index.html
Functions/getImages/: index.html
Functions/plotPixel/: index.html
Tutorials/md/QuickStartGuide/: index.html
Tutorials/notebooks/: QuickStartGuide.ipynb
docs/: index.md  install.md
docs/Functions/: PixelPartitioner.md  getImages.md  plotPixel.md
docs/Tutorials/md/: QuickStartGuide.md
install/: index.html
pixelpartitioner/: PixelPartitioner.py  getImages.py  plotPixel.py
search/: search_index.json
tests/: test_allFunctions.py
tests/data/: image_1.tif  image_2.tif
