[tool.poetry]
name = "pixelpartitioner"
version = "0.1.0"
description = ""
authors = ["Ajit Johnson Nirmal <ajitjohnson.n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
tifffile = "^2024.2.12"
pandas = "^2.2.1"
scikit-image = "^0.22.0"
matplotlib = "^3.8.3"
pytest = "^8.0.2"
imagecodecs = "^2024.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]